k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: todo
  labels:
    app: todo-app
spec:
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
