k8s/auth-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-mysql
  namespace: todo
  labels:
    app: auth-mysql
spec:
  selector:
    app: auth-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
