k8s/auth-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-redis
  namespace: todo
  labels:
    app: auth-redis
spec:
  selector:
    app: auth-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
