k8s/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
  namespace: todo
  labels:
    app: kong
spec:
  selector:
    app: kong
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
