k8s/task-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-mysql
  namespace: todo
  labels:
    app: task-mysql
spec:
  selector:
    app: task-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
