k8s/task-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-redis
  namespace: todo
  labels:
    app: task-redis
spec:
  selector:
    app: task-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
